--- a/css/style.scss
+++ b/css/style.scss
@@ -1,1 +1,42 @@
 @import "general";
+
+// Header section
+.header {
+  padding: 1.6rem 2.4rem;
+  margin-top: 2rem;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+
+  //   Logo
+  a {
+    text-decoration: none;
+
+    .logo-title {
+      font-size: 3.6rem;
+      color: $primary;
+      font-weight: 700;
+    }
+  }
+
+  ul {
+    list-style: none;
+    display: flex;
+    gap: 4rem;
+
+    li {
+      font-size: 1.8rem;
+      font-family: "Poppins", sans-serif;
+    }
+  }
+
+  .nav-icons {
+    display: flex;
+    gap: 3.2rem;
+  }
+
+  .icon {
+    font-size: 3rem;
+    color: $black-color;
+  }
+}
