--- a/css/style.scss
+++ b/css/style.scss
@@ -1,6 +1,7 @@
 @import "general";
-
+/////////////////////
 // Header section
+////////////////////
 .header {
   padding: 1.6rem 2.4rem;
   margin-top: 2rem;
@@ -38,5 +39,68 @@
   .icon {
     font-size: 3rem;
     color: $black-color;
+  }
+}
+
+/////////////////////
+// Hero section
+////////////////////
+
+.hero-section {
+  @extend .container;
+  flex-direction: column;
+
+  .text-box {
+    padding: 0 5rem;
+    margin-bottom: 3.2rem;
+  }
+
+  h1 {
+    font-size: 7.4rem;
+    font-weight: 700;
+    line-height: 1.2;
+    text-align: center;
+  }
+
+  .img-box {
+    border-radius: 40px;
+    overflow: hidden;
+  }
+
+  img {
+    object-fit: cover;
+    height: 40rem;
+    filter: opacity(0.5);
+    width: 100%;
+  }
+}
+
+/////////////////////
+// Hero section
+////////////////////
+
+.featured-section {
+  @extend .container;
+  margin-top: 9.6rem;
+  p {
+    font-family: "Poppins", sans-serif;
+    font-size: 1.8rem;
+    letter-spacing: 1px;
+    color: rgb(133, 133, 133);
+    text-align: center;
+    text-transform: uppercase;
+    margin-bottom: 3.2rem;
+  }
+
+  .img-box {
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  img {
+    filter: brightness(0.5);
+    height: 8.5rem;
+    opacity: 40%;
+    display: inline-block;
   }
 }
